--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
    <title>Document</title>
 </head>
 <body>
-   <p>copia</p>
+   <nav class="menu">
+      <ul>
+         <li><a href="#">Inicio</a></li>
+         <li><a href="#">Ingresar Usuarios</a></li>
+         <li><a href="#">Listar Usuarios</a></li>
+      </ul>
+
+   </nav>
+
 </body>
 </html>
