--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Document</title>
+   <link rel="stylesheet" href="/CSS/estilos.css">
 </head>
 <body>
-   <nav class="menu">
+   <nav id="menu">
       <ul>
          <li><a href="#">Inicio</a></li>
          <li><a href="#">Ingresar Usuarios</a></li>
          <li><a href="#">Listar Usuarios</a></li>
+         <li><a href="#">Ingresar Productos</a></li>
+         <li><a href="#">Listar Productos</a></li>
       </ul>
 
    </nav>
