--- a/index.html
+++ b/index.html
@@ -7,16 +7,24 @@
    <title>Document</title>
    <link rel="stylesheet" href="/CSS/estilos.css">
 </head>
-<body>
+<body id="fondo-menu">
    <nav id="menu">
       <ul>
-         <li><a href="#">Inicio</a></li>
-         <li><a href="#">Ingresar Usuarios</a></li>
-         <li><a href="#">Listar Usuarios</a></li>
-         <li><a href="#">Ingresar Productos</a></li>
+         <li><a href="#">Edición</a>
+            <ul>
+               <li><a href="/editar_usuarios.html">Editar Usuarios</a></li>
+               <li><a href="#"></a></li>
+            </ul>
+         </li>
+         <li><a href="#">Registros</a>
+            <ul>
+               <li><a href="/registro_de_producto.html">Registro de Productos</a></li>
+            </ul>
+         </li>
+         <li><a href="#">Listados</a></li>
          <li><a href="#">Listar Productos</a></li>
+         <li><a href="/login.html">Cerrar seccion</a></li>
       </ul>
-
    </nav>
 
 </body>
