--- a/editar_usuarios.html
+++ b/editar_usuarios.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Editar Usuarios</title>
+    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/css/edicion.css">
+    <link rel="stylesheet" href="/css/registro_producto.css">
 </head>
 <body>
     <nav id="menu">
@@ -19,7 +22,7 @@
 </div>
 <div>
     <form>
-        <h1> REGISTRO DE USUARIOS</h1>
+        <h1> EDITAR USUARIOS</h1>
         <label for="inputNombre"> NOMBRES </label>
         <input type="text" id="inputNombre" name="inputNombre" placeholder="Nombres" required autocomplete="on">
         <br>
