--- a/login.html
+++ b/login.html
@@ -10,6 +10,7 @@
 <body id="login">
     <form action="#" method="post">
     <div id="login-box">
+        <img src="/img/logo-blanco.png" alt="img" id="logo">
         <h1>Login</h1>
     <div class="form">
         <div class="item">
