--- a/registro_usuario.html
+++ b/registro_usuario.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro de Usuarios</title>
+    <link rel="stylesheet" href="/css/index.css">
     <link rel="stylesheet" href="/CSS/estilos.css">
     <link rel="stylesheet" href="/CSS/registro_usuarios.css">
 </head>
@@ -15,12 +16,12 @@
                <li><a href="/login.html">Inicio</a></li>
                <li><a href="#">Ingresar Usuarios</a></li>
                <li><a href="#">Listar Usuarios</a></li>
-               <li><a href="/registro_usuario.html">Ingresar Productos</a></li>
+               <li><a href="#">Ingresar Productos</a></li>
                <li><a href="#">Listar Productos</a></li>
             </ul>
          </nav>
     </div>
-    <div>
+    <div class="#">
         <form>
             <h1> REGISTRO DE USUARIOS</h1>
             <label for="inputNombre"> NOMBRES </label>
