--- a/registro_proveedores.html
+++ b/registro_proveedores.html
@@ -9,17 +9,38 @@
     <link rel="stylesheet" href="/CSS/registro_proveedores.css">
 </head>
 <body id="registro-pro">
-    <div>
-        <nav id="menu">
-            <ul>
-               <li><a href="/login.html">Inicio</a></li>
-               <li><a href="#">Ingresar Usuarios</a></li>
-               <li><a href="#">Listar Usuarios</a></li>
-               <li><a href="/registro_proveedores.html">Ingresar Productos</a></li>
-               <li><a href="#">Listar Productos</a></li>
-            </ul>
-         </nav>
+    <nav>
+        
+        <label for="check" class="checkbtn">
+           <i class="fas fa-bars"></i>
+        </label>
+        <a href="/index.html" class="enlace">
+           <img src="/img/logo-blanco.png" alt="menu" class="logo">
+        </a>
+        <ul>
+           <li><a class="active" href="/index.html">Inicio</a></li>
+           <li><a href="#">Usuario Final</a></li>
+           <li><a href="#">Administrador</a></li>
+           <li><a href="#">Super Administrador</a></li>
+           <li><a href="/login.html">Cerrar Sesión</a></li>
+        </ul>
+     </nav>
+     <section></section>
+     <ul class="nav">
+        <li><a href="/edicion.html">EDICIÓN</a></li>
+        <li><a href="/registro.html">REGISTRO</a></li>
+        <li><a href="/lista.html">LISTADO</a></li>
+    </ul>
+    <div id="caja">
+        <ul>
+            <li><a href="#">REGISTRO</a></li>
+            <li><a href="/registro_de_producto.html" target="_self">REGISTRAR PRODUCTO</a></li>
+            <li><a href="/registro_proveedores.html">REGISTRAR PROVEEDOR</a></li>
+            <li><a href="/registro_usuario.html">REGISTRAR USUARIO</a></li>
+        </ul>
     </div>
+    <div id="caja-grande"></div>
+    <div class="registro">
     <div>
         <form>
             <h1> REGISTRO DE PROVEEDORES</h1>
